src/test/rustdoc-ui/ice-normal.rs
// compile-flags:-Z unstable-options -Z treat-err-as-bug
// failure-status: 101

fail
//~^ ERROR expected one of `!` or `::`, found `<eof>`
